# GI_NAV

./: CMakeLists.txt  README.md
include/: earth.h  ginav.h  ob_gins.h  preintegration.h  rotation.h  types.h
src/: ginav.cpp  preintegration.cpp
